css/site.css
/* Remove padding from body so navbar and footer don't look weird */
body {
	padding: 0;
}

/* Add padding back in through container so text looks right on small screens */
.container {
	padding: 0 20px;
}

/* Space out each section on home and people pages */
.section {
	margin-top: 60px;
}

/* Make <h1> page headings stick out */
.page-title {
	font-size: 50px;
	font-weight: bold;
	margin: 50px 0 30px 0;
}

p {
	font-size: 20px;
	line-height: 32px;
	color: rgb(73, 78, 85);
	font-family: 'ff-tisa-web-pro', Georgia, Cambria, 'Times New Roman', Times, serif;
	margin-bottom: 30px;
}

/* HOME PAGE */

/* Headline styles */

#splash {
	/*background-color: black;	*/
	/*background-image:url(/img/shoreline.png); */
	/*background-repeat:no-repeat;*/
	/*background-attachment: fixed;*/
	/*padding-bottom: 120px;*/
}

.headline {
	font-size: 90px;
	font-weight: 900;
	letter-spacing: -2px;
	line-height: 80px; 
	text-align: center;
	padding: 0 10px;
	/*Overwrite default h1 margin so page fits*/
	margin-bottom: 0px;
	color: rgb(52, 73, 94);
}

.headline p {
	color: rgb(189, 195, 199);
	font-size: 50px; 
	font-weight: 400;
	font-family: 'Lato', sans-serif;
	line-height: 60px; 
	letter-spacing: -2px;
	margin: 0;
	text-align: center;
}

#logo {
	margin-bottom: 40px;
}

#uofc {
	margin: 50px 0 50px 0;
}

#slogan {
	font-size: 35px;
}

/* Adjust headline for small screens */
@media (max-width: 480px) {
	.headline {
		font-size: 65px;
		line-height: 50px;
	}
	.headline p {
		font-size: 30px;
		line-height: 50px;
	}
	.headline small {
		font-size: 30px;
	}
}

.button-link h3 {
	font-size: 20px;
}

#partners h1 {
	margin-bottom: 40px;
}

/*Line up partner logos*/
#partners .span2 {
	width: 170px;
	height: 80px;
	margin: 70px 0 50px 70px;
	display: block;
}
#partners img {
	vertical-align: bottom;
}

#uofc {
	margin-top: 10px;
}

#ci {
	margin-top: -8px; 
}

#urbanccd {
	margin-top: 0px;
}


#harris {
	margin-top: 15px;
}

#argonne {
	margin-top: -18px;
}

/* Adapt people pics for front page */
.people-spacing .span2 {
	margin-bottom: 30px;
	margin-right: 50px;
	height: 250px;
}


/* PEOPLE PAGE */
/* Makes people headshots and bios look right */

.people .span2 {
	height: 350px;
	width: 200px;
	display: block;
	margin-left: 40px;
	margin-bottom: 5px;
}

@media (max-width: 767px) { 
	.people .span2 {
		margin-left: auto;
		margin-right: auto;
	}
}

/* Creates 3 people rows for advisors and staff on home and people pages */
.people .span4 {
	margin-bottom: 60px;
}

.people img {
	width: 150px;
	height: 150px;
	border-radius: 50%;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.people p {
	text-align: center;
	font-size: 15px;
	margin: 0px;
}

.people h6 {
	text-align: center;
	font-size: 18px;
	font-weight: bold;
	font-family: 'ff-tisa-web-pro', Georgia, Cambria, 'Times New Roman', Times, serif;
	color: rgb(73, 78, 85);
	line-height: 20px;
	margin-top: 20px;
}

.people .icons {
	width: 55px;
	height: 10px;
	display: block;
	margin: 5px auto;
	font-size: 25px;
}

.people .icons a {
	text-decoration: none;
	color: rgba(66,63,55,0.15);
	-webkit-transition: color 0.15s;
	-moz-transition: color 0.15s;
	-o-transition: color 0.15s;
	transition: color 0.15s;
}

.people .icons a:hover {
	color: rgb(26, 188, 156);
}

/* POST */
.post-title {
	text-align: center;
}

.post-date-author {
	text-align: center;
	font-style: italic;
}

.center {
	margin: 3em auto; 
	display: block; 
	width: 100%;
}

/* CONTACT PAGE */
#contact img {
	height: 150px;
	width: 150px;
	display: block;
	margin: 30px auto;
}

#email-list {
	display: block;
	margin: 60px auto;
	width: 300px;
}

/* FOOTER */

#footer h6 {
	text-align: center;
	margin-bottom: 50px;
}

#footer i {
	font-size: 120px;
	display: block;
	height: 130px;
	width: 130px;
	margin-left: auto;
	margin-right: auto;
}

